tests/snapshots/integration__integration_tests__list__many_worktrees_varied.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpFpHlqd/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
[2mBranch                    [0m  [2mCommit  [0m  [2mPath[0m
[1m[35mmain                      [0m  [1m[35mb834638e[0m  [1m[35m./test-repo[0m
medium-name                 [2mb834638e[0m  ./medium-name
short                       [2mb834638e[0m  ./short
very-long-branch-name-here  [2mb834638e[0m  ./very-long-branch-name-here
with-changes                [2mb834638e[0m  ./with-changes

[2mShowing 5 worktrees[0m

----- stderr -----
