tests/snapshots/integration__integration_tests__list__readme_example_list_branches.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--branches"
    - "--full"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "115"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m       [1mStatus[0m        [1mHEAD±[0m    [1mmain↕[0m     [1mmain…±[0m  [1mPath[0m                [1mRemote⇅[0m  [1mCI[0m  [1mCommit[0m    [1mAge
@ [1mfeature-api[0m  [36m+[39m   [2m↕[22m[2m⇡[22m     [32m+54[0m   [31m-5[0m   [32m↑4[0m  [2m[31m↓1[0m  [32m+234[0m  [31m-24[0m  [1m./repo.feature-api[0m   [32m⇡3[0m      [2m[34m●[0m   [2md35485d7[0m  [2m30m
^ main             [2m^[22m[2m⇅[22m                                   ./repo               [32m⇡1[0m  [2m[31m⇣1[0m  [32m●[0m   [2me18e1b4d[0m  [2m4d
+ fix-auth         [2m↕[22m[2m|[22m                [32m↑2[0m  [2m[31m↓1[0m   [32m+25[0m  [31m-11[0m  ./repo.fix-auth        [2m|[0m     [32m●[0m   [2m2517d700[0m  [2m5h
  exp             [2m/[22m[2m↕[22m                 [32m↑2[0m  [2m[31m↓1[0m  [32m+137[0m                                        [2m52cad122[0m  [2m2d
  wip             [2m/[22m[2m↕[22m                 [32m↑1[0m  [2m[31m↓1[0m   [32m+33[0m                                        [2m7ca6d817[0m  [2m3d

⚪ [2mShowing 3 worktrees, 2 branches, 1 with changes, 4 ahead, 1 column hidden
